Add google login

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="google-signin-client_id" content="450429795824-6ms86sk1kispv9hn8jf53t3lf4ij2sk9.apps.googleusercontent.com">
   </head>
   <body>
     <noscript>
